--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,16 @@ h1 {
 .projects{
     color: ghostwhite;
     text-align: left;
+    display:flex; 
+    flex-wrap:wrap;
 }
+    .project {
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+    background: white; /* pick a color */
+    border-radius: 25%;
+    }
 .contact{
     color: cadetblue;
     text-align: center;
