--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,14 @@ h1 {
     width: 30%;
     margin: 10px;
     padding: 20px 10px;
-    background: white; /* pick a color */
-    border-radius: 25%;
+    background: gray;
+    background-size:contain;
+    border-radius: 20%;
+    text-align: center;
     }
+a {
+    text-decoration: none;
+}
 .contact{
     color: cadetblue;
     text-align: center;
